pyt/retry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fail-app
  namespace: retry-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fail-app
  template:
    metadata:
      labels:
        app: fail-app
    spec:
      containers:
      - name: fail-app
        # REPLACE [PROJECT_ID] below
        image: us-central1-docker.pkg.dev/project-d1a95002-78b0-493b-b7e/my-repo/fail-app:v5
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: fail-app-service
  namespace: retry-test
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: fail-app
