pyt/gatway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fail-app-gateway
  namespace: retry-test
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
